fix: card hover layout on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -64,35 +64,10 @@ nav ul li:hover::after {
 .sidebar li {
   width: 100%;
 }
-/* nav {
-  display: flex;
-  padding: 2% 6%;
-  justify-content: space-between;
-  align-items: center;
-} */
 
 nav img {
   width: 150px;
 }
-/* .nav-links {
-  flex: 1;
-  text-align: right;
-}
-
-.nav-links ul li {
-  list-style: none;
-  display: inline-block;
-  padding: 8px 12px;
-  position: relative;
-}
-
-.nav-links ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 13px;
-}
-
- */
 
 .text-box {
   width: 90%;
@@ -147,33 +122,6 @@ nav img {
     display: block;
   }
 
-  /* .nav-links ul li {
-    display: block;
-  }
-
-  .nav-links {
-    position: absolute;
-    background: #f44336;
-    height: 100vh;
-    width: 200px;
-    top: 0;
-    right: -200px;
-    text-align: left;
-    z-index: 2;
-    transition: 1s;
-  }
-
-  nav .fa {
-    display: block;
-    color: #fff;
-    margin: 10px;
-    font-size: 22px;
-    cursor: pointer;
-  }
-
-  .nav-links ul {
-    padding: 30px;
-  } */
 }
 
 .course {
@@ -246,6 +194,13 @@ h3 {
 .campus-col img {
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 700px) {
+  .campus-col img {
+  width: 100%;
+  display: block;
+}
 }
 
 .layer {
